@@ -1,3 +1,8 @@
+2009-01-28  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: Coding style cleanups.
+	(found_hole): Tolerate zero-padding to given alignment.
+
 2009-01-27  Petr Machata  <pmachata@redhat.com>
 
 	* dwarflint.c: Implement validation of .debug_ranges and
